style(blog): fix content overflow

--- a/src/styles/mdx.module.css
+++ b/src/styles/mdx.module.css
@@ -36,4 +36,5 @@
   flex-grow: 5;
   flex-shrink: 5;
   flex-basis: 0;
+  width: 0;
 }
